sass/etna.scss
/* ... */
.tna-header__navigation-item-link {
    &:hover,
    &--selected,
    &--selected:visited {
        background: #fff !important;
    }
}

@include media.on-mobile {
    .tna-header__navigation-items {
        background: #fff !important;
    }
}

.tna-breadcrumbs {
    padding-bottom: 0;
}

.tna-button-group {
    &--full {
        justify-content: stretch;

        @include media.on-mobile {
            flex-direction: column;

            align-items: stretch;
        }

        .tna-button {
            margin: 0;

            flex: 1;
        }
    }
}

.tna-hero {
    margin-top: 1rem;
    margin-bottom: 2rem;

    &__figure {
        &--smaller {
            min-height: 20vw;
        }
    }

    &__information {
        p {
            &:last-child {
                margin-bottom: 0;
            }
        }
    }

    img#{&}__image {
        object-fit: cover;
    }
}

.tna-message {
    margin-top: 2rem !important;
    margin-bottom: 3rem;
}

.tna-skip-link {
    transition: none !important;
}

.tna-container {
    &--centred {
        justify-content: center;
    }

    &--align-center {
        align-items: center;
    }

    &--space-between {
        justify-content: space-between;
    }

    @include media.on-larger-than-mobile {
        &--reverse-desktop {
            flex-direction: row-reverse;
        }
    }

    // tna-container variant which is full-width at mobile - used on what's on landing page
    &--full-width-mobile {
        @include media.on-mobile {
            padding-left: 0;
            padding-right: 0;

            .tna-column {
                padding-left: 0;
                padding-right: 0;
            }
        }
    }
}

.tna-chip {
    &--plain {
        border: none;
    }
}

.tna-large-paragraph {
    @include colour.colour-font("font-dark");
    @include typography.relative-font-size(22);
}

.template-focused-article {
    .tna-breadcrumb-wrapper {
        // ELEMENT SPECIFIC TO THIS SITE
        background-color: #343338 !important;
    }

    .tna-breadcrumbs {
        margin-bottom: 0;
        color: #fff !important;
        background-color: #343338 !important;

        a,
        &__item--expandable .tna-breadcrumbs__link {
            color: inherit !important;
        }
    }

    .generic-intro {
        padding-bottom: 4rem;

        h1 {
            &:last-child {
                padding-bottom: 2rem;
            }
        }
    }

    .generic-intro,
    .generic-intro__meta {
        // @include colour.invert;
        background-color: #343338 !important;
        color: #fff !important;

        .tna-heading {
            padding-top: 1rem;
            color: inherit !important;
        }

        a {
            &,
            &:link,
            &:visited {
                color: inherit;
            }
        }
    }

    .generic-intro__meta {
        padding-top: 1rem;
        padding-bottom: 4rem;
    }

    .hero-image__container {
        margin-top: -2rem;

        .tna-hero {
            max-width: grid.$largest-container-width;
            margin: 0 auto;
            padding: 0 grid.$gutter-width;
            box-sizing: border-box;

            @include media.on-mobile {
                padding-right: 0;
                padding-left: 0;
            }
        }
    }

    @include media.on-larger-than-mobile {
        .tna-header__navigation-item-link:hover,
        .tna-header__navigation-item-link:hover:link,
        .tna-header__navigation-item-link:hover:visited,
        .tna-header__navigation-item-link--selected,
        .tna-header__navigation-item-link--selected:link,
        .tna-header__navigation-item-link--selected:visited {
            color: #fff !important;
            background-color: #343338 !important;
        }
    }
}

.block-content_section,
.section-wrapper {
    .section-separator__heading {
        padding-top: 2rem;
    }
}

.article-container,
.generic-intro__paragraph {
    .tna-container {
        justify-content: center;
    }

    @include media.on-larger-than-mobile {
        .section-separator__heading {
            padding-right: 0;
            padding-left: 0;
        }
    }
}

/* stylelint-disable no-descending-specificity */
.highlight-gallery {
    color: #fff;

    .tna-heading {
        color: inherit;
    }
}

.card-group-secondary-nav {
    margin-bottom: 2rem;

    &__heading {
        margin-top: 0;
    }
}

.generic-intro__paragraph {
    margin-top: 3rem;
    margin-bottom: 3rem;
}

.related-highlight-cards {
    .related-highlight-cards__card {
        margin-top: 2rem;
    }
}

.section-separator__heading {
    padding-top: 2rem;
}

.container + .container {
    margin-top: 2rem;
}

.featured-article__description,
.article-container__main,
.container,
.search-landing-buckets__link,
.search-buckets__link,
.search-results-hero__form-search-box,
.search-filters__search,
[class^="col-"],
[class*=" col-"] {
    box-sizing: border-box;
}

#ds-cookie-consent-banner {
    padding: 1rem 0 !important;
    position: static !important;
    background: #134571 !important;
    border-radius: 0 !important;

    .container {
        padding: 0 0 10px !important;
    }
}
/* ... */

